--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ JB :
     gauges :
         site_id : 'SITE ID'
     google : 
-        tracking_id : 'UA-123-12'
+        tracking_id : 'UA-90396738-1'
     getclicky :
       site_id : 
     mixpanel :
